Reformat bib file, remove duplicates

--- a/refs.bib
+++ b/refs.bib
@@ -153,6 +153,7 @@
   year={1989},
   publisher={IEEE}
 }
+
 ============================================== 1990 ===============================================
 
 @inproceedings{indyk1998approximate,
@@ -207,6 +208,7 @@
 }
 
 ============================================== 2000 ===============================================
+
 @inproceedings{kaiser2002pan,
   title={Pan-STARRS: a large synoptic survey telescope array},
   author={Kaiser, Nicholas and Aussel, Herve and Burke, Barry E and Boesgaard, Hans and Chambers, Ken and Chun, Mark Richard and Heasley, James N and Hodapp, Klaus-Werner and Hunt, Bobby and Jedicke, Robert and others},
@@ -379,6 +381,7 @@
   year={2005},
   publisher={IOP Publishing}
 }
+
 ============================================== 2010 ===============================================
 @book{de2010probing,
   title={Probing dark energy with theory and observations},
@@ -432,7 +435,6 @@
 }
 
 ============================================== 2011 ===============================================
-
 @article{ye2011time,
   title={Time series shapelets: a novel technique that allows accurate, interpretable and fast
     classification},
@@ -478,7 +480,6 @@
 }
 
 ============================================== 2012 ===============================================
-
 @article{krizhevsky2012imagenet,
   title={Imagenet classification with deep convolutional neural networks},
   author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
@@ -495,7 +496,6 @@
 }
 
 ============================================== 2013 ===============================================
-
 @article{lin2013network,
   title={Network in network},
   author={Lin, Min and Chen, Qiang and Yan, Shuicheng},
@@ -1217,8 +1217,7 @@
 }
 
 @article{allam2018photometric,
-  title={The photometric LSST astronomical time-series classification challenge (PLAsTiCC): Data
-        set},
+  title={The photometric lsst astronomical time-series classification challenge (plasticc): Data set},
   author  = {{The PLAsTiCC team} and Allam Jr, Tarek and Bahmanyar, Anita and Biswas, Rahul and
         Dai, Mi and Galbany, Llu{\'\i}s and Hlo{\v{z}}ek, Ren{\'e}e and Ishida, Emille EO and Jha,
         Saurabh W and Jones, David O and Kessler, Richard and others},
@@ -1265,33 +1264,26 @@
     publisher={IOP Publishing}
 }
 @article{brout2018first,
-  title={First Cosmology Results Using Type Ia Supernovae From the Dark Energy Survey: Photometric
-        Pipeline and Light Curve Data Release},
-  author={Brout, D and Sako, M and Scolnic, D and D'Andrea, CB and Davis, TM and Hinton, SR and
-        Kessler, R and Kim, AG and Lasker, J and Macaulay, E and others},
+  title={First Cosmology Results Using Type Ia Supernovae From the Dark Energy Survey: Photometric Pipeline and Light Curve Data Release},
+  author={Brout, D and Sako, M and Scolnic, D and D'Andrea, CB and Davis, TM and Hinton, SR and Kessler, R and Kim, AG and Lasker, J and Macaulay, E and others},
   journal={arXiv preprint arXiv:1811.02378},
   year={2018}
 }
 @article{d2018first,
-  title={First Cosmology Results Using Type Ia Supernovae From the Dark Energy Survey: Survey
-      Overview and Supernova Spectroscopy},
-  author={D'Andrea, CB and Smith, M and Sullivan, M and Nichol, RC and Thomas, RC and Kim, AG and
-      M{\"o}ller, A and Sako, M and Castander, FJ and Filippenko, AV and others},
+  title={First Cosmology Results Using Type Ia Supernovae From the Dark Energy Survey: Survey Overview and Supernova Spectroscopy},
+  author={D'Andrea, CB and Smith, M and Sullivan, M and Nichol, RC and Thomas, RC and Kim, AG and M{\"o}ller, A and Sako, M and Castander, FJ and Filippenko, AV and others},
   journal={arXiv preprint arXiv:1811.09565},
   year={2018}
 }
 @article{jones2018foundation,
-    title={The Foundation Supernova Survey: Measuring Cosmological Parameters with Supernovae from a
-        Single Telescope},
-    author={Jones, DO and Scolnic, DM and Foley, RJ and Rest, A and Kessler, R and Challis, PJ and
-        Chambers, KC and Coulter, DA and Dettman, KG and Foley, MM and others},
+    title={The Foundation Supernova Survey: Measuring Cosmological Parameters with Supernovae from a Single Telescope},
+    author={Jones, DO and Scolnic, DM and Foley, RJ and Rest, A and Kessler, R and Challis, PJ and Chambers, KC and Coulter, DA and Dettman, KG and Foley, MM and others},
     journal={arXiv preprint arXiv:1811.09286},
     year={2018}
 }
 
 @article{revsbech2018staccato,
-  title={STACCATO: a novel solution to supernova photometric classification with biased training
-      sets},
+  title={STACCATO: a novel solution to supernova photometric classification with biased training sets},
   author={Revsbech, Esben A and Trotta, Roberto and van Dyk, David A},
   journal={Monthly Notices of the Royal Astronomical Society},
   volume={473},
@@ -1311,13 +1303,12 @@
 
 @article{bagnall2018uea,
   title={The UEA multivariate time series classification archive, 2018},
-  author={Bagnall, Anthony and Dau, Hoang Anh and Lines, Jason and Flynn, Michael and Large, James
-    and Bostrom, Aaron and Southam, Paul and Keogh, Eamonn},
+  author={Bagnall, Anthony and Dau, Hoang Anh and Lines, Jason and Flynn, Michael and Large, James and Bostrom, Aaron and Southam, Paul and Keogh, Eamonn},
   journal={arXiv preprint arXiv:1811.00075},
   year={2018}
 }
-============================================== 2019 ===============================================
 
+============================================== 2019 ===============================================
 @book{gakhov2019probabilistic,
   title={Probabilistic Data Structures and Algorithms for Big Data Applications},
   author={Gakhov, A.},
@@ -1337,10 +1328,8 @@
   publisher={Elsevier}
 }
 @article{abbott2019first,
-  title={First cosmology results using type Ia supernovae from the dark energy survey: constraints
-    on cosmological parameters},
-  author={Abbott, TMC and Allam, S and Andersen, P and Angus, C and Asorey, J and Avelino, A and
-    Avila, S and Bassett, BA and Bechtol, K and Bernstein, GM and others},
+  title={First cosmology results using type Ia supernovae from the dark energy survey: constraints on cosmological parameters},
+  author={Abbott, TMC and Allam, S and Andersen, P and Angus, C and Asorey, J and Avelino, A and Avila, S and Bassett, BA and Bechtol, K and Bernstein, GM and others},
   journal={The Astrophysical Journal Letters},
   volume={872},
   number={2},
@@ -1360,9 +1349,7 @@
 
 @article{ivezic2019lsst,
   title={LSST: from science drivers to reference design and anticipated data products},
-  author={Ivezi{\'c}, {\v{Z}}eljko and Kahn, Steven M and Tyson, J Anthony and Abel, Bob and Acosta,
-      Emily and Allsman, Robyn and Alonso, David and AlSayyad, Yusra and Anderson, Scott F and
-          Andrew, John and others},
+  author={Ivezi{\'c}, {\v{Z}}eljko and Kahn, Steven M and Tyson, J Anthony and Abel, Bob and Acosta, Emily and Allsman, Robyn and Alonso, David and AlSayyad, Yusra and Anderson, Scott F and Andrew, John and others},
   journal={The Astrophysical Journal},
   volume={873},
   number={2},
@@ -1372,10 +1359,8 @@
 }
 
 @article{nordin2019transient,
-  title={Transient processing and analysis using AMPEL: alert management, photometry, and evaluation
-      of light curves},
-  author={Nordin, J and Brinnel, Valery and Van Santen, J and Bulla, Mattia and Feindt, Ulrich and
-      Franckowiak, A and Fremling, C and Gal-Yam, A and Giomi, M and Kowalski, M and others},
+  title={Transient processing and analysis using AMPEL: alert management, photometry, and evaluation of light curves},
+  author={Nordin, J and Brinnel, Valery and Van Santen, J and Bulla, Mattia and Feindt, Ulrich and Franckowiak, A and Fremling, C and Gal-Yam, A and Giomi, M and Kowalski, M and others},
   journal={Astronomy \& Astrophysics},
   volume={631},
   pages={A147},
@@ -1386,17 +1371,14 @@
 @article{smith2019lasair,
   title={Lasair: the transient alert broker for LSST: UK},
   author={Smith, Ken},
-  journal={The Extragalactic Explosive Universe: the New Era of Transient Surveys and Data-Driven
-      Discovery},
+  journal={The Extragalactic Explosive Universe: the New Era of Transient Surveys and Data-Driven Discovery},
   pages={51},
   year={2019}
 }
 
 @article{malz2019photometric,
-  title={The Photometric LSST Astronomical Time-series Classification Challenge PLAsTiCC: Selection
-      of a Performance Metric for Classification Probabilities Balancing Diverse Science Goals},
-  author={Malz, AI and Hlo{\v{z}}ek, Ren{\'e}e and Allam, T and Bahmanyar, Anita and Biswas, Rahul
-      and Dai, Mi and Galbany, Llu{\'\i}s and Ishida, EEO and Jha, SW and Jones, DO and others},
+  title={The Photometric LSST Astronomical Time-series Classification Challenge PLAsTiCC: Selection of a Performance Metric for Classification Probabilities Balancing Diverse Science Goals},
+  author={Malz, AI and Hlo{\v{z}}ek, Ren{\'e}e and Allam, T and Bahmanyar, Anita and Biswas, Rahul and Dai, Mi and Galbany, Llu{\'\i}s and Ishida, EEO and Jha, SW and Jones, DO and others},
   journal={The Astronomical Journal},
   volume={158},
   number={5},
@@ -1406,20 +1388,16 @@
 }
 
 @inproceedings{allam2019optbasp,
-  author = {T. {Allam Jr} and R. Biswas and R. Hlŏzek and M. Lochner and J.~D.~McEwen and H. V.
-      Peiris and C. Setzer},
+  author = {T. {Allam Jr} and R. Biswas and R. Hlŏzek and M. Lochner and J.~D.~McEwen and H. V. Peiris and C. Setzer},
   series = {Biomedical and Astronomical Signal Processing Frontiers (BASP)},
   pdf = {papers/lsst_opt_sn_basp.pdf},
-  title = {Optimising the LSST observing strategy for Supernova light curve classification with
-     machine learning},
+  title = {Optimising the LSST observing strategy for Supernova light curve classification with machine learning},
   year = {2019}
 }
 
 @article{kessler2019models,
-  title={Models and simulations for the photometric LSST astronomical time series classification
-      challenge (PLAsTiCC)},
-  author={Kessler, R and Narayan, G and Avelino, A and Bachelet, E and Biswas, Rahul and Brown, PJ
-      and Chernoff, DF and Connolly, AJ and Dai, M and Daniel, S and others},
+  title={Models and simulations for the photometric LSST astronomical time series classification challenge (PLAsTiCC)},
+  author={Kessler, R and Narayan, G and Avelino, A and Bachelet, E and Biswas, Rahul and Brown, PJ and Chernoff, DF and Connolly, AJ and Dai, M and Daniel, S and others},
   journal={Publications of the Astronomical Society of the Pacific},
   volume={131},
   number={1003},
@@ -1443,7 +1421,7 @@
 
 @article{brunel2019cnn,
   title={A CNN adapted to time series for the classification of Supernovae},
-  author={Brunel, Anthony and Pasquet, Johanna and PASQUET, J{\'e}r{\^o}ome and Rodriguez, Nancy and Comby, Fr{\'e}d{\'e}ric and Fouchez, Dominique and Chaumont, Marc},
+  author={Brunel, Anthony and Pasquet, Johanna and PASQUET, J{\'e}r{\^o}me and Rodriguez, Nancy and Comby, Fr{\'e}d{\'e}ric and Fouchez, Dominique and Chaumont, Marc},
   journal={Electronic imaging},
   volume={2019},
   number={14},
@@ -1554,7 +1532,7 @@
     year = "2020",
     note = "and 2021 update"
 }
-@article{aghanim2020planck-params,
+@article{akrami2020planck-params,
   title={Planck 2018 results-VI. Cosmological parameters},
   author={Aghanim, Nabila and Akrami, Yashar and Ashdown, Mark and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, AJ and Barreiro, RB and Bartolo, N and Basak, S and others},
   journal={Astronomy \& Astrophysics},
@@ -1577,9 +1555,7 @@
 }
 @article{ismail2020inceptiontime,
   title={Inceptiontime: Finding alexnet for time series classification},
-  author={Fawaz, Hassan and Lucas, Benjamin and Forestier, Germain and Pelletier, Charlotte
-    and Schmidt, Daniel F and Weber, Jonathan and Webb, Geoffrey I and Idoumghar, Lhassane and
-      Muller, Pierre-Alain and Petitjean, Fran{\c{c}}ois},
+  author={Fawaz, Hassan and Lucas, Benjamin and Forestier, Germain and Pelletier, Charlotte and Schmidt, Daniel F and Weber, Jonathan and Webb, Geoffrey I and Idoumghar, Lhassane and Muller, Pierre-Alain and Petitjean, Fran{\c{c}}ois},
   journal={Data Mining and Knowledge Discovery},
   volume={34},
   number={6},
@@ -1596,14 +1572,8 @@
 }
 
 @misc{jones_r_lynne_2020_4048838,
-  author       = {Jones, R. Lynne and
-                  Yoachim, Peter and
-                  Ivezic, Zeljko and
-                  Neilsen, Eric H. and
-                  Ribeiro, Tiago},
-  title        = {{Survey Strategy and Cadence Choices for the Vera
-                   C. Rubin Observatory Legacy Survey of Space and
-                   Time (LSST)}},
+  author       = {Jones, R. Lynne and Yoachim, Peter and Ivezic, Zeljko and Neilsen, Eric H. and Ribeiro, Tiago},
+  title        = {{Survey Strategy and Cadence Choices for the Vera C. Rubin Observatory Legacy Survey of Space and Time (LSST)}},
   month        = sep,
   year         = 2020,
   publisher    = {Zenodo},
@@ -1614,16 +1584,7 @@
 
 @Article{harris2020array,
  title         = {Array programming with {NumPy}},
- author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J.
-                 van der Walt and Ralf Gommers and Pauli Virtanen and David
-                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
-                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
-                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
-                 Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
-                 R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre
-                 G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
-                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
-                 Travis E. Oliphant},
+ author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J. van der Walt and Ralf Gommers and Pauli Virtanen and David Cournapeau and Eric Wieser and Julian Taylor and Sebastian Berg and Nathaniel J. Smith and Robert Kern and Matti Picus and Stephan Hoyer and Marten H. van Kerkwijk and Matthew Brett and Allan Haldane and Jaime Fern{'{a}}ndez del R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and Warren Weckesser and Hameer Abbasi and Christoph Gohlke and Travis E. Oliphant},
  year          = {2020},
  month         = sep,
  journal       = {Nature},
@@ -1654,14 +1615,12 @@
 }
 
 @article{hlovzek2020results,
-    title={Results of the Photometric LSST Astronomical Time-series Classification Challenge
-        (PLAsTiCC)},
-    author={Hlo{\v{z}}ek, R and Ponder, KA and Malz, AI and Dai, M and Narayan, G and Ishida, EEO
-        and Allam Jr, T and Bahmanyar, A and Biswas, R and Galbany, L and others},
+    title={Results of the Photometric LSST Astronomical Time-series Classification Challenge (PLAsTiCC)},
+    author={Hlo{\v{z}}ek, R and Ponder, KA and Malz, AI and Dai, M and Narayan, G and Ishida, EEO and Allam Jr, T and Bahmanyar, A and Biswas, R and Galbany, L and others},
     eprint       = {2012.12392},
     eprintclass  = {astro-ph.IM},
     eprinttype   = {arxiv},
-    journal={arXiv preprint arXiv:2012.12392},
+    journal={ArXiv preprint arXiv:2012.12392},
     year={2020}
 }
 
@@ -1685,8 +1644,7 @@
 }
 
 @misc{tensorflow2020quantization,
-  author = {Pulkit Bhuwalka and Alan Chiao and Suharsh Sivakumar and Raziel Alvarez and Feng Liu and Lawrence Chan
-    and Skirmantas Kligys and Yunlu Li and Khanh LeViet and Billy Lambert and Mark Daoust and Tim Davis and Sarah Sirajuddin, and François Chollet},
+  author = {Pulkit Bhuwalka and Alan Chiao and Suharsh Sivakumar and Raziel Alvarez and Feng Liu and Lawrence Chan and Skirmantas Kligys and Yunlu Li and Khanh LeViet and Billy Lambert and Mark Daoust and Tim Davis and Sarah Sirajuddin, and François Chollet},
   title = {Quantization Aware Training with TensorFlow Model Optimization Toolkit - Performance with Accuracy},
   year = 2020,
   url = {https://blog.tensorflow.org/2020/04/quantization-aware-training-with-tensorflow-model-optimization-toolkit.html},
@@ -1724,7 +1682,6 @@
   year={2021}
 }
 
-
 @article{david2021tensorflow,
   title={Tensorflow lite micro: Embedded machine learning for tinyml systems},
   author={David, Robert and Duke, Jared and Jain, Advait and Janapa Reddi, Vijay and Jeffries, Nat and Li, Jian and Kreeger, Nick and Nappier, Ian and Natraj, Meghna and Wang, Tiezhen and others},
@@ -1758,10 +1715,8 @@
 }
 
 @article{ruiz2021great,
-  title={The great multivariate time series classification bake off: a review and experimental
-    evaluation of recent algorithmic advances},
-  author={Ruiz, Alejandro Pasos and Flynn, Michael and Large, James and Middlehurst, Matthew and
-    Bagnall, Anthony},
+  title={The great multivariate time series classification bake off: a review and experimental evaluation of recent algorithmic advances},
+  author={Ruiz, Alejandro Pasos and Flynn, Michael and Large, James and Middlehurst, Matthew and Bagnall, Anthony},
   journal={Data Mining and Knowledge Discovery},
   volume={35},
   number={2},
@@ -1771,9 +1726,7 @@
 }
 @article{forster2021automatic,
   title={The Automatic Learning for the Rapid Classification of Events (ALeRCE) Alert Broker},
-  author={F{\"o}rster, F and Cabrera-Vives, G and Castillo-Navarrete, E and Est{\'e}vez, PA and
-      S{\'a}nchez-S{\'a}ez, P and Arredondo, J and Bauer, FE and Carrasco-Davis, R and Catelan, M
-          and Elorrieta, F and others},
+  author={F{\"o}rster, F and Cabrera-Vives, G and Castillo-Navarrete, E and Est{\'e}vez, PA and S{\'a}nchez-S{\'a}ez, P and Arredondo, J and Bauer, FE and Carrasco-Davis, R and Catelan, M and Elorrieta, F and others},
   journal={The Astronomical Journal},
   volume={161},
   number={5},
@@ -1785,7 +1738,7 @@
 @article{muthukrishna2021real,
   title={Real-time detection of anomalies in large-scale transient surveys},
   author={Muthukrishna, Daniel and Mandel, Kaisey S and Lochner, Michelle and Webb, Sara and Narayan, Gautham},
-  journal={arXiv preprint arXiv:2111.00036},
+  journal={ArXiv preprint arXiv:2111.00036},
   year={2021}
 }
 
@@ -1795,8 +1748,8 @@
   eprint       = {2105.06178},
   eprintclass  = {astro-ph.IM},
   eprinttype   = {arxiv},
-  journal={arXiv preprint arXiv:2105.06178},
-  year={2021},
+  journal={ArXiv preprint arXiv:2105.06178},
+  year={2021}
 }
 
 @article{matheson2021antares,
@@ -1808,32 +1761,6 @@
   pages={107},
   year={2021},
   publisher={IOP Publishing}
-}
-
-@article{aivazyan2022grandma,
-  title={GRANDMA Observations of ZTF/Fink Transients during Summer 2021},
-  author={Aivazyan, V and Almualla, M and Antier, S and Baransky, A and Barynova, K and Basa, S and Bayard, F and Beradze, S and Berezin, D and Blazek, M and others},
-  journal={arXiv preprint arXiv:2202.09766},
-  year={2022}
-}
-
-@article{leoni2021fink,
-  title={Fink: early supernovae Ia classification using active learning},
-  author={Leoni, Marco and Ishida, Emille EO and Peloton, Julien and M{\"o}ller, Anais},
-  journal={arXiv preprint arXiv:2111.11438},
-  year={2021}
-}
-@article{moller2021fink,
-    title={Fink, a new generation of broker for the LSST community},
-    author={M{\"o}ller, Anais and Peloton, Julien and Ishida, Emille EO and Arnault, Chris and
-        Bachelet, Etienne and Blaineau, Tristan and Boutigny, Dominique and Chauhan, Abhishek and
-            Gangler, Emmanuel and Hernandez, Fabio and others},
-    journal={Monthly Notices of the Royal Astronomical Society},
-    volume={501},
-    number={3},
-    pages={3272--3288},
-    year={2021},
-    publisher={Oxford University Press}
 }
 
 ============================================== 2022 ===============================================
@@ -1855,10 +1782,8 @@
 }
 
 @article{alves2022considerations,
-  title={Considerations for Optimizing the Photometric Classification of Supernovae from the Rubin
-      Observatory},
-  author={Alves, Catarina S and Peiris, Hiranya V and Lochner, Michelle and McEwen, Jason D and
-      Allam, Tarek and Biswas, Rahul and LSST Dark Energy Science Collaboration and others},
+  title={Considerations for Optimizing the Photometric Classification of Supernovae from the Rubin Observatory},
+  author={Alves, Catarina S and Peiris, Hiranya V and Lochner, Michelle and McEwen, Jason D and Allam, Tarek and Biswas, Rahul and LSST Dark Energy Science Collaboration and others},
   journal={The Astrophysical Journal Supplement Series},
   volume={258},
   number={2},
@@ -1868,28 +1793,22 @@
 }
 
 ======================================= SOFTWARE / WEB LINKS ======================================
-
 @misc{LDM-723,
-    author = {Eric Bellm and Robert Blum and Melissa Graham and Leanne Guy and Zeljko Ivezic and
-        William O'Mullane and Maria Patterson and John Swinbank and for the LSST
-            Project},
+    author = {Eric Bellm and Robert Blum and Melissa Graham and Leanne Guy and Zeljko Ivezic and William O'Mullane and Maria Patterson and John Swinbank and for the LSST Project},
     title = "{LDM-723, Call for Proposals for Community Alert Brokers}",
     howpublished = {\url{https://ls.st/ldm-723}},
     year = "2020"
 }
 
 @misc{LDM-612,
-    author = {Eric Bellm and Robert Blum and Melissa Graham and Leanne Guy and Zeljko Ivezic and
-        William O'Mullane and Maria Patterson and John Swinbank and Beth Willman for the LSST
-            Project},
+    author = {Eric Bellm and Robert Blum and Melissa Graham and Leanne Guy and Zeljko Ivezic and William O'Mullane and Maria Patterson and John Swinbank and Beth Willman for the LSST Project},
     title = "{LDM-612, Plans and Policies for LSST Alert Distribution}",
     howpublished = {\url{https://ls.st/ldm-612}},
     year = "2019"
 }
 
 @misc{LDM-682,
-    author = {Eric Bellm and Robert Blum and Melissa Graham and Leanne Guy and Zeljko Ivezic and
-        William O'Mullane and John Swinbank},
+    author = {Eric Bellm and Robert Blum and Melissa Graham and Leanne Guy and Zeljko Ivezic and William O'Mullane and John Swinbank},
     title = "{LDM-682, Call for Letters of Intent for Community Alert Brokers}",
     howpublished = {\url{https://ls.st/ldm-682}},
     year = "2019"
@@ -1920,9 +1839,7 @@
 }
 
 @misc{2021ascl.soft07006L,
-  author = {{Lochner}, Michelle and {Alves}, Catarina and {Peiris}, Hiranya and {McEwen}, Jason and
-     {Allam}, Tarek, Jr. and {Biswas}, Rahul and {Holland}, Johnny and {Lahav}, Ofer and
-     {Schuhmann}, Robert and {Setzer}, Christian and {Winter}, Max},
+  author = {{Lochner}, Michelle and {Alves}, Catarina and {Peiris}, Hiranya and {McEwen}, Jason and {Allam}, Tarek, Jr. and {Biswas}, Rahul and {Holland}, Johnny and {Lahav}, Ofer and {Schuhmann}, Robert and {Setzer}, Christian and {Winter}, Max},
   title = "{snmachine: Photometric supernova classification}",
   keywords = {Software},
   year = 2021,
@@ -1963,7 +1880,6 @@
   howpublished ={\url{http://www.damtp.cam.ac.uk/user/tong/cosmo/cosmo.pdf}},
 }
 
-
 @misc{tflite-docs,
   title={TensorFlow Lite Documentation},
   author={{The TensorFlow Team}},
@@ -1987,10 +1903,7 @@
 
 @misc{elasticc,
   title={The DESC ELAsTiCC Challenge},
-  author={Gautham Naryan and Alex Gagliano and Alex Malz and Catarina Alves and Deep Chatterjee
-    and Emille Ishida and Heather Kelly and John Crenshaw and Konstantin Malanchev and
-      Laura Salo and Maria Vincenzi and Martine Lokken and Qifeng Cheng and Rahul Biswas and
-      Ren{\'e}e Hlo{\v{z}}ek and Rick Kessler and Robert Knop and Ved Shah Gautam},
+  author={Gautham Naryan and Alex Gagliano and Alex Malz and Catarina Alves and Deep Chatterjee and Emille Ishida and Heather Kelly and John Crenshaw and Konstantin Malanchev and Laura Salo and Maria Vincenzi and Martine Lokken and Qifeng Cheng and Rahul Biswas and Ren{\'e}e Hlo{\v{z}}ek and Rick Kessler and Robert Knop and Ved Shah Gautam},
   year={2022},
   howpublished ={\url{https://portal.nersc.gov/cfs/lsst/DESC_TD_PUBLIC/ELASTICC/}},
 }
@@ -2011,4 +1924,61 @@
   eprint= {Twitter},
   date= {2021-07-06},
   howpublished ={\url{https://twitter.com/ylecun/status/1412544692219269121}},
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Unique Allam-related entries (duplicates removed):
+@unpublished{atx,
+  title={An Astronomical Xception: Depthwise-Separable Convolutions for Efficient Photometric Classification},
+  author={\textbf{Allam Jr, Tarek} and McEwen, Jason D},
+  year={2023},
+  note={In Prep.}
+}
+
+@article{allam2023tiny,
+  title={The Tiny Time-series Transformer: Low-latency High-throughput Classification of Astronomical Transients using Deep Model Compression},
+  author={\textbf{Allam Jr, Tarek} and Peloton, Julien and McEwen, Jason D},
+  journal={arXiv preprint arXiv:2303.08951},
+  archivePrefix = {arXiv},
+  eprint = {2303.08951},
+  primaryClass = {astro-ph.IM},
+  year={2023}
+}
+
+@article{allam2020data,
+  title={Semantic segmentation of 3D point clouds},
+  author={\textbf{Allam, Tarek} and Bohdal, Ondrej and Dong, Nanqing and Erofeev, Ivan and Hu, Qingyong and Kuehnert, Julian and Laribi{\`e}re, Pauline Maury and Morreale, Luca and Organokov, Mukharbek and Shi, Chenfu and others},
+  year={2020},
+  publisher={Zenodo}
+}
+
+@article{ponder2020photometric,
+  title={The Photometric LSST Astronomical Time Series Classification Challenge (PLAsTiCC): Final Results},
+  author={Ponder, K and Hlozek, R and \textbf{Allam, T} Bahmanyar, A and Biswas, R and Boone, K and Dai, M and Galbany, L and Ishida, E and Jha, S and others},
+  journal={AAS},
+  pages={203--15},
+  year={2020}
+}
+
+@article{allamoptimising,
+  title={Optimising the LSST Observing Strategy for Supernova Light Curve Classification with Machine Learning},
+  author={\textbf{Allam Jr, Tarek} and Biswas, Rahul and Hlozek, Ren{\'e}e and Lochner, Michelle and McEwen, Jason D and Peiris, Hiranya and Setzer, Christian},
+  year={2019}
+}
+
+@article{hlozek2019photometric,
+  title={The Photometric LSST Astronomical Time Series Classification Challenge (PLAsTiCC)},
+  author={Hlozek, Ren{\'e}e and Kessler, Rick and \textbf{Allam, Tarek} and Bahmanyar, Anita and Biswas, Rahul and Dai, Mi and Galbany, Lluis and Ishida, Emilie and Jha, Saurabh and Jones, David and others},
+  journal={AAS},
+  volume={233},
+  pages={212--01},
+  year={2019}
+}
+
+@mastersthesis{allam2016radiorecon,
+  title={Radio Interferometric Image Reconstruction for the SKA: A Deep Learning Approach},
+  author={\textbf{Allam Jr, Tarek}},
+  school={University College London},
+  year={2016},
+  howpublished={\url{https://tarekallamjr.com/assets/tarekallam-msc-thesis.pdf}}
 }
